src/test/deca/context/valid/objet/cast-float-int.deca
// Description:
//    cast float to int
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    (int)(2.0);
}